Issue #130, prevent caption from getting too close to page bottom.

--- a/style.scss
+++ b/style.scss
@@ -428,7 +428,7 @@ h2 {
 
     .thr-caption-box {
         width: 36em;
-        height: 6em;
+        height: 6.5em;
         overflow: hidden;
         margin: 0 auto;
     }
